# CopilotTaskMaster

./: .gitignore  Dockerfile  EXAMPLES.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/agents/: taskmaster-cli.agent.md  taskmaster.agent.md
.github/workflows/: publish-pypi.yml  publish.yml  secret-scan.yml
taskmaster/: __init__.py  cli.py  mcp_server.py  search.py  task_manager.py  utils.py
tasks/examples/: implement-search.md  mcp-integration.md  setup-project.md
tasks/mcp/: task1.md
tests/: test_cli.py  test_mcp.py  test_taskmaster.py  test_version.py
