[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "CopilotTaskMaster"
dynamic = ["version"]
description = "Python tools for managing markdown task cards with MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CopilotTaskMaster Contributors"}
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-frontmatter>=1.0.0",
    "mcp>=0.1.0",
]

[tool.setuptools_scm]
# Write the resolved version into a small file inside the package so runtime
# code or tests can import it if needed (optional; we already resolve at runtime)
write_to = "taskmaster/_version.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
taskmaster = "taskmaster.cli:main"
taskmaster-mcp = "taskmaster.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["taskmaster*"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
